--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 </head>
 
 <body>
-<header>
-    <h1 style="text-align: center;"> Our Team</h1>
+
+<main>
+    <div class="container">
+        <div class="row text-center">
+            <h1 style="text-align: center;"> Our Team</h1>
 <p style="text-align: center;"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
     A quibusdam, eum ratione facilis soluta inventore</p>
     <p style="text-align: center;">iste alias sequi possimus numquam.
     Rem, molestias laborum modi quibusdam obcaecati nostrum? Ab, sapiente.</p>
-</header>
-
-<main>
-    <div class="container">
-        <div class="row" id="card">
+        </div>
+        <div class="row justify-content-center" id="card">
 
         </div>
       </div>
